--- a/homeserver/docker/.env
+++ b/homeserver/docker/.env
@@ -1,3 +1,9 @@
+######################################################################
+# Title   : .env file to be used with docker-compose.yml
+# By      : cyb3rdoc
+# License : MIT
+######################################################################
+
 # DO NOT USE QUOTES TO ENCLOSE THE VALUES
 
 ##### SYSTEM
