--- a/homeserver/docker/docker-compose.yml
+++ b/homeserver/docker/docker-compose.yml
@@ -1,3 +1,9 @@
+######################################################################
+# Title   : docker-compose file for quick setup
+# By      : cyb3rdoc
+# License : MIT
+######################################################################
+
 version: "3.9"
 
 networks:
