--- a/homeserver/docker/.env
+++ b/homeserver/docker/.env
@@ -46,6 +46,8 @@ HOMEPAGE_HTTP=3001
 DELUGE_HTTP=8112
 DELUGE_DHT=51515
 FILEBROWSER_HTTP=8081
+JELLYFIN_HTTP=8096
+JELLYFIN_HTTPS=8920
 
 ##### SECURITY AND PRIVACY
 
